Fix gap between icon and label, label min width

--- a/public/scripts/extensions/quick-reply/style.less
+++ b/public/scripts/extensions/quick-reply/style.less
@@ -329,8 +329,12 @@
                 .qr--set-itemLabelContainer {
                     display: flex;
                     align-items: center;
+                    gap: 0.5em;
                     .qr--set-itemIcon:not(.fa-solid) {
                         display: none;
+                    }
+                    .qr--set-itemLabel {
+                        min-width: 24px;
                     }
                 }
 
